fixed ul alignment

--- a/scss/demo/_demo.scss
+++ b/scss/demo/_demo.scss
@@ -78,34 +78,6 @@ pre{
 }
 
 
-/*
-.window:nth-child(2){
-    .content{
-        position:absolute;
-        top:50%;
-        left:50%;
-        margin-top:-180px;
-        margin-left: -160px;
-        h2{
-            color:$light-gray;
-            text-align:left;
-            .highlight{
-                color:white;
-            }
-        }
-        .explanation{
-            font-family:$regular;
-            color:$dark-gray;
-            font-size:1.4em;
-            text-align:center;
-            padding:0 15%;
-            li{
-                color:$light-gray;
-            }
-    }
-}
-*/
-
 // explanation
 .window {
     ul{ list-style-type:none; }
@@ -165,45 +137,10 @@ pre{
 	}
 }
 
-/*
-// code example
-.window:nth-child(4){
-    pre{
-        position:absolute;
-        top:50%;
-        left:50%;
-        margin:-220px 0 0 -450px;
-    }
+/* Fixing alignment for centered UL in footer */
+ul {
+	padding-left: 0;
 }
-
-// api
-.window:nth-child(5){
-    .content{
-        position:absolute;
-        top:50%;
-        left:50%;
-        margin:-350px 0 0 -450px;
-    }
-    h1{
-        color:$dark-gray;
-    }
-    pre{
-        color:$dark-gray;
-    }
-}
-
-
-//download
-.window:nth-child(6){
-    .content{
-        position:absolute;
-        top:50%;
-        left:50%;
-        margin:-100px 0 0 -100px;
-        text-align:center;
-    }
-}
-*/
 
 ::-webkit-input-placeholder {
    color: $light-gray;
